tests/machine/x/c/map_membership.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘map_string_int_put’:
/workspace/mochi/tests/machine/x/c/map_membership.c:33:9: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   33 |     if (strcmp(m->data[i].key, k) == 0) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/map_membership.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_membership.c:87:22: error: invalid initializer
   87 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2};
      |                      ^
/workspace/mochi/tests/machine/x/c/map_membership.c:88:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   88 |   printf("%d\n", (map_string_int_contains(m, "a")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                                |
      |            int                                              char *
      |           %s
/workspace/mochi/tests/machine/x/c/map_membership.c:89:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   89 |   printf("%d\n", (map_string_int_contains(m, "c")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                                |
      |            int                                              char *
      |           %s

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
